# PyReactLab

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
PyReactLab/: __init__.py  app.py
PyReactLab/configs/: __init__.py  configuration.yml  constants.py  setting.py
PyReactLab/core/: __init__.py  chemicalpotential.py  reactionsystem.py  refmanager.py
PyReactLab/docs/: __init__.py  chemicalpotential.py  gasreactions.py  liquidreactions.py  optim.py  phasecontroller.py  reaction.py  reactionanalyzer.py  reactionsystem.py  refmanager.py  source.py  thermolinkdb.py  thermomodels.py
PyReactLab/models/: __init__.py  properties.py
PyReactLab/phase/: __init__.py  main.py  phasecontroller.py
PyReactLab/plugin/: reference.yml
PyReactLab/reaction/: __init__.py  reaction.py  reactionanalyzer.py
PyReactLab/thermo/: __init__.py  models.py  source.py
PyReactLab/utils/: __init__.py  chemreact.py  postproc.py  refs.py  tools.py
chemreactsys/: __init__.py  app.py
chemreactsys/configs/: constants.py
chemreactsys/docs/: reactionsys.py
docs/: documentation.md  examples.md  index.md
examples/: check-phase.py  equilibrium.py  thermodb_config_link.yml
pyChemReactSys/configs/: setting.py
tests/: input1.yml  msource.py  test0.py  test1.py  test2.py  thermodb_config_link.yml  thermodb_phase_config_link.yml
tests/data/: hydrogen.pkl  methanol.pkl  water.pkl
