[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyReactLab"
version = "0.3.0"
description = "PyReactLab is an open-source Python package designed to analyze chemical reactions and theoretically assess their thermodynamic feasibility."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    {name = "Sina Gilassi", email = "sina.gilassi@gmail.com"}
]
keywords = [
    "python",
    "chemical-engineering",
    "process-modeling",
    "reaction-analysis",
    "equilibrium-constant",
    "kinetics",
    "thermodynamic-analysis",
    "reaction-kinetics",
    "thermodynamics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
]
dependencies = [
    "pycuc>=2.1.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pythermodb>=1.11.42",
    "pythermodb-settings>=0.1.9",
    "pythermomodels>=1.5.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
plotting = ["matplotlib"]

[project.urls]
"Homepage" = "https://github.com/sinagilassi/PyReactLab"
"Bug Tracker" = "https://github.com/sinagilassi/PyReactLab/issues"
"Repository" = "https://github.com/sinagilassi/PyReactLab"
"Documentation" = "https://pyreactlab.readthedocs.io/en/latest/"

[tool.setuptools.packages.find]
where = ["."]
include = ["PyReactLab*"]
exclude = ["tests*", "examples*","docs*",".vscode*"]

[tool.setuptools.package-data]
"PyReactLab" = ["config/*.yml", "config/*.csv", "data/*.csv", "data/*.yml", "plugin/*.yml", "plugin/*.csv"]
